--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 aioesphomeapi==24.6.2
 aiohappyeyeballs==2.4.3
 ajsonrpc==1.2.0
-anyio==4.6.0
+anyio==4.6.2.post1
 argcomplete==3.5.1
 async_interrupt==1.2.0
-bitarray==2.9.2
+bitarray==2.9.3
 bitstring==4.2.3
 bottle==0.12.25
 cairocffi==1.7.1
@@ -13,14 +13,14 @@ certifi==2024.8.30
 cffi==1.17.1
 chacha20poly1305-reuseable==0.13.2
 chardet==5.2.0
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 cryptography==43.0.0
 cssselect2==0.7.0
 defusedxml==0.7.1
 ecdsa==0.19.0
-esphome==2024.9.2
+esphome==2024.10.0
 esphome-dashboard==20240620.0
 esptool==4.7.0
 h11==0.14.0
@@ -36,11 +36,11 @@ paho-mqtt==1.6.1
 pillow==10.2.0
 platformio==6.1.15
 protobuf==5.28.2
+puremagic==1.27
 pycparser==2.22
 pyelftools==0.31
-pyparsing==3.1.4
+pyparsing==3.2.0
 pyserial==3.5
-python-magic==0.4.27
 PyYAML==6.0.1
 reedsolo==1.7.0
 requests==2.32.3
