--- a/albionboxes/prod_toto_bidet_controller.yaml
+++ b/albionboxes/prod_toto_bidet_controller.yaml
@@ -5,7 +5,7 @@ substitutions:
   comment: "Controlling the Toto bidet in Full Bath via IR"
   box_config_file_name: prod_toto_bidet_controller
   remote_transmitter_pin: "GPIO26"
-  vornado_restore_mode: RESTORE_DEFAULT_OFF
+  toto_restore_mode: RESTORE_DEFAULT_OFF
   repeat_times: "3"
   repeat_wait_time: "7ms"
   carrier_frequencey: "38000"
@@ -47,86 +47,169 @@ script:
   - id: send_on_off_ir_blast
     then:
       - remote_transmitter.transmit_raw:
-          code: [ 1250, -436, 1250, -435, 405, -1281, 1250, -436, 1249, -436, 405, -1280, 405, -1281, 405, -1281, 405, -1281, 1250, -436, 405, -1279, 405, -8129, 1252, -435, 1250, -436, 405, -1279, 1251, -436, 1250, -435, 405, -1280, 406, -1281, 405, -1280,
-                  405, -1281, 1251, -435, 404, -1281, 405, -8128, 1251, -436, 1249, -436, 405, -1280, 1251, -435, 1250, -435, 405, -1281, 405, -1281, 404, -1281, 405, -1281, 1250, -436, 404, -1280, 406, -8127, 1251, -436, 1249, -436, 404, -1281, 1250, -436, 1249, -436,
-                  405, -1280, 405, -1281, 405, -1281, 405, -1280, 1251, -435, 405, -1280, 405, -8129, 1251, -436, 1250, -436, 404, -1281, 1250, -436, 1249, -437, 404, -1280, 405, -1281, 404, -1281, 405, -1281, 1249, -437, 404, -1281, 405, -8128, 1251, -435, 1249, -437,
-                  404, -1281, 1250, -436, 1250, -436, 404, -1280, 405, -1281, 405, -1280, 405, -1281, 1250, -436, 404, -1280, 406 ]
+          code: [
+                  6020, -3037, 537, -575, 537, -1713, 537, -575, 537, -575, 537, -575, 564, -575, 537, -575, 537, -575, 536, -602, 537, -575, 537, -575, 537, -1713, 537, -576, 536, -576, 560, -552, 560, -578, 536, -576, 561, -551, 536, -576, 587, -552, 560,
+                  -552, 560, -552, 535, -576, 587, -1664, 536, -576, 536, -1714, 560, -552, 536, -576, 560, -579, 560, -1663, 560, -1691, 536, -1688, 536, -576, 562, -1688, 560, -553, 535, -577, 586, -552, 535, -1688, 536, -1715, 560
+                ]
           carrier_frequency: "${carrier_frequencey}"
-          repeat:
-            times: "${repeat_times}"
-            wait_time: "${repeat_wait_time}"
-  - id: send_change_direction_ir_blast
+      - remote_transmitter.transmit_raw:
+          code: [
+                  5991, -3037, 560, -552, 537, -1713, 537, -576, 536, -576, 536, -576, 586, -552, 537, -575, 537, -575, 537, -575, 587, -552, 560, -552, 536, -1714, 561, -551, 536, -576, 536, -576, 560, -578, 536, -576, 560, -552, 536, -576, 536, -603, 560,
+                  -552, 559, -552, 537, -576, 562, -1687, 537, -576, 560, -1690, 536, -576, 536, -576, 536, -603, 535, -1688, 536, -1715, 559, -1665, 560, -552, 562, -1688, 560, -553, 535, -577, 585, -553, 559, -1665, 559, -1691, 560
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  5992, -3036, 538, -575, 536, -1714, 561, -551, 537, -575, 560, -552, 563, -575, 561, -551, 537, -575, 537, -576, 562, -576, 536, -576, 536, -1714, 537, -575, 537, -575, 536, -576, 536, -603, 559, -553, 536, -576, 560, -552, 536, -602, 551,
+                  -561, 560, -552, 560, -552, 586, -1664, 536, -576, 536, -1714, 561, -552, 559, -553, 535, -603, 536, -1688, 535, -1715, 560, -1664, 560, -553, 561, -1689, 535, -577, 559, -553, 586, -552, 559, -1665, 535, -1715, 560
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+  - id: send_wash_butt_ir_blast
     then:
       - remote_transmitter.transmit_raw:
-          code: [ 1271, -416, 1269, -417, 423, -1260, 1270, -417, 1268, -416, 424, -1261, 424, -1261, 425, -1262, 423, -1262, 424, -1263, 423, -1261, 1269, -7265, 1270, -417, 1268, -417, 424, -1262, 1269, -418, 1268, -418, 423, -1261, 424, -1264, 422, -1263,
-                  423, -1262, 424, -1262, 424, -1262, 1269, -7263, 1270, -418, 1268, -418, 422, -1261, 1269, -418, 1267, -419, 421, -1263, 423, -1263, 423, -1261, 424, -1263, 401, -1284, 423, -1262, 1269, -7264, 1248, -440, 1265, -420, 420, -1265, 1247, -440, 1245,
-                  -439, 401, -1284, 423, -1264, 421, -1264, 402, -1283, 402, -1285, 401, -1283, 1247, -7285, 1269, -419, 1247, -438, 402, -1283, 1247, -439, 1246, -440, 400, -1284, 402, -1284, 402, -1283, 403, -1283, 402, -1284, 402, -1285, 1247, -7286, 1249, -439,
-                  1246, -439, 401, -1284, 1247, -438, 1247, -439, 401, -1284, 402, -1284, 402, -1285, 401, -1283, 403, -1284, 401, -1284, 1247, -7285, 1269, -418, 1266, -444, 376, -1284, 1266, -420, 1266, -419, 400, -1285, 423, -1263, 423, -1262, 423, -1263, 422, -1264,
-                  422, -1263, 1268 ]
+          code: [
+                  6020, -3036, 562, -550, 562, -1689, 537, -575, 537, -575, 537, -575, 563, -576, 537, -575, 536, -576, 560, -578, 561, -551, 537, -575, 536, -1714, 537, -575, 537, -576, 536, -575, 563, -576, 560, -552, 536, -1687, 564, -575, 536, -1688,
+                  560, -1690, 561, -552, 536, -576, 560, -1690, 560, -552, 536, -576, 536, -602, 536, -577, 535, -576, 536, -576, 563, -576, 560, -1663, 537, -576, 562, -1688, 536, -576, 560, -1690, 560, -1664, 536, -603, 559, -553, 535,
+                ]
           carrier_frequency: "${carrier_frequencey}"
-          repeat:
-            times: "${repeat_times}"
-            wait_time: "${repeat_wait_time}"
-  - id: send_increase_fans_ir_blast
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6016, -3037, 537, -575, 561, -1663, 537, -601, 561, -551, 537, -575, 537, -575, 564, -575, 536, -576, 536, -576, 560, -552, 563, -575, 537, -1687, 537, -601, 537, -576, 536, -576, 536, -576, 536, -602, 561, -1663, 536, -576, 561, -1689,
+                  537, -1687, 563, -576, 536, -576, 561, -1662, 587, -553, 560, -551, 560, -552, 560, -579, 536, -576, 535, -577, 535, -577, 535, -1715, 536, -576, 536, -1714, 560, -552, 536, -1688, 562, -1688, 536, -577, 560, -552, 586
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+  - id: send_feminine_wash_ir_blast
     then:
       - remote_transmitter.transmit_raw:
-          code: [ 1271, -417, 1268, -417, 423, -1261, 1270, -417, 1269, -415, 1270, -418, 422, -1262, 424, -1262, 424, -1262, 1269, -442, 1244, -417, 424, -8109, 1272, -416, 1270, -417, 423, -1261, 1270, -441, 1244, -418, 1268, -441, 399, -1262, 424, -1261,
-                  424, -1263, 1269, -417, 1268, -417, 423, -8109, 1270, -418, 1268, -417, 423, -1261, 1270, -417, 1268, -416, 1270, -416, 424, -1262, 424, -1261, 424, -1260, 1270, -418, 1267, -418, 423, -8109, 1270, -419, 1267, -419, 422, -1261, 1269, -418, 1267, -417,
-                  1269, -441, 399, -1261, 424, -1261, 424, -1262, 1268, -418, 1267, -417, 422, -8108, 1269, -418, 1267, -417, 423, -1262, 1268, -418, 1267, -442, 1242, -419, 422, -1261, 423, -1262, 424, -1262, 1268, -419, 1267, -418, 422, -8108, 1270, -418, 1267, -419,
-                  422, -1261, 1269, -420, 1265, -418, 1268, -418, 422, -1262, 424, -1261, 424, -1262, 1268, -419, 1267, -418, 422 ]
+          code: [
+                  6020, -3036, 537, -575, 537, -1687, 537, -601, 561, -551, 537, -575, 537, -575, 564, -575, 561, -551, 536, -576, 560, -552, 587, -551, 537, -1687, 537, -601, 537, -576, 536, -576, 536, -576, 536, -602, 536, -1687, 537, -576, 536, -1714,
+                  536, -1688, 587, -552, 536, -576, 536, -576, 560, -1690, 536, -576, 536, -576, 536, -602, 536, -576, 536, -576, 536, -576, 536, -603, 559, -1664, 560, -1691, 559, -553, 535, -1689, 586, -1664, 559, -553, 560, -552, 586
+                ]
           carrier_frequency: "${carrier_frequencey}"
-          repeat:
-            times: "${repeat_times}"
-            wait_time: "${repeat_wait_time}"
-  - id: send_decrease_fans_ir_blast
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6015, -3037, 537, -575, 537, -1687, 563, -576, 536, -576, 536, -576, 536, -602, 537, -575, 536, -576, 536, -576, 536, -602, 561, -552, 536, -1687, 563, -576, 536, -576, 536, -576, 560, -552, 562, -576, 536, -1688, 536, -603, 535, -1688,
+                  536, -1715, 536, -576, 536, -576, 536, -576, 536, -1714, 536, -576, 536, -576, 562, -577, 559, -553, 560, -552, 535, -577, 561, -577, 535, -1689, 535, -1715, 559, -553, 560, -1690, 536, -1689, 559, -553, 561, -577, 560
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+  - id: send_stop_ir_blast
     then:
       - remote_transmitter.transmit_raw:
-          code: [ 1270, -417, 1269, -442, 398, -1262, 1269, -442, 1244, -442, 398, -1262, 424, -1262, 424, -1262, 424, -1262, 424, -1261, 1269, -443, 398, -8108, 1272, -417, 1269, -442, 398, -1262, 1270, -442, 1243, -442, 398, -1260, 426, -1261, 425, -1261,
-                  424, -1261, 424, -1262, 1268, -442, 398, -8106, 1271, -442, 1243, -442, 398, -1262, 1268, -443, 1242, -417, 424, -1261, 425, -1261, 424, -1260, 425, -1261, 425, -1262, 1268, -418, 422, -8108, 1271, -442, 1243, -442, 398, -1262, 1268, -418, 1268, -442,
-                  398, -1262, 423, -1262, 424, -1261, 424, -1261, 425, -1262, 1267, -418, 423, -8106, 1271, -417, 1269, -419, 421, -1261, 1269, -443, 1243, -442, 398, -1261, 424, -1261, 424, -1261, 424, -1262, 423, -1263, 1267, -443, 398, -8106, 1271, -442, 1242, -419,
-                  422, -1261, 1268, -443, 1242, -443, 397, -1262, 423, -1263, 423, -1263, 422, -1261, 424, -1262, 1268, -443, 397 ]
+          code: [
+                  6019, -3036, 562, -551, 537, -1686, 588, -551, 537, -575, 562, -550, 537, -575, 563, -576, 536, -575, 537, -575, 537, -602, 537, -575, 536, -1687, 537, -602, 537, -575, 537, -575, 537, -1713, 561, -552, 560, -1663, 588, -551, 536, -1688,
+                  536, -576, 563, -1687, 537, -576, 536, -1714, 560, -1664, 536, -602, 561, -1663, 536, -1714, 561, -552, 559, -1665, 562, -576, 560, -552, 536, -1714, 560, -1664, 536, -1715, 559, -553, 536, -576, 560, -552, 560, -579, 559
+                ]
           carrier_frequency: "${carrier_frequencey}"
-          repeat:
-            times: "${repeat_times}"
-            wait_time: "${repeat_wait_time}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  5992, -3036, 538, -575, 536, -1687, 537, -602, 537, -575, 537, -575, 561, -551, 563, -576, 536, -576, 536, -576, 536, -576, 562, -576, 536, -1688, 561, -577, 536, -576, 536, -576, 536, -1714, 561, -552, 536, -1687, 537, -602, 536, -1688,
+                  536, -576, 562, -1688, 561, -552, 535, -1714, 537, -1688, 536, -602, 536, -1688, 560, -1690, 561, -552, 560, -1663, 563, -576, 536, -576, 559, -1665, 562, -1688, 536, -1688, 562, -577, 535, -577, 535, -577, 560, -579, 534,
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  5992, -3010, 563, -576, 537, -1686, 537, -576, 563, -575, 537, -575, 560, -552, 537, -602, 536, -576, 536, -575, 537, -575, 537, -602, 536, -1688, 536, -576, 536, -602, 536, -576, 561, -1663, 586, -553, 536, -1687, 537, -576, 562, -1688,
+                  536, -576, 536, -1714, 537, -576, 560, -1690, 535, -1688, 537, -576, 562, -1688, 536, -1688, 587, -552, 559, -1664, 536, -577, 561, -577, 535, -1689, 560, -1690, 560, -1664, 536, -603, 535, -577, 559, -553, 559, -553, 561,
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  5991, -3037, 537, -576, 536, -1687, 564, -575, 537, -575, 537, -575, 537, -601, 561, -551, 537, -576, 560, -551, 537, -602, 536, -576, 536, -1688, 536, -602, 537, -575, 561, -551, 561, -551, 563, -576, 536, -576, 536, -576, 560, -552, 586,
+                  -552, 536, -576, 536, -576, 560, -579, 559, -553, 535, -576, 560, -552, 536, -603, 559, -553, 536, -576, 559, -553, 586, -552, 536, -576, 536, -576, 536, -576, 586, -553, 559, -553, 559, -553, 535, -577, 585
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6017, -3037, 537, -575, 561, -1662, 564, -575, 537, -575, 537, -575, 537, -575, 587, -551, 537, -576, 536, -575, 537, -602, 536, -576, 536, -1688, 560, -578, 537, -575, 537, -575, 560, -552, 563, -576, 536, -576, 536, -576, 536, -575, 563,
+                  -576, 536, -576, 536, -576, 536, -576, 587, -552, 560, -552, 535, -577, 560, -578, 560, -552, 560, -552, 560, -552, 536, -602, 560, -552, 560, -552, 560, -552, 586, -553, 560, -552, 535, -577, 559, -553, 585
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6018, -3036, 537, -576, 537, -1686, 564, -575, 561, -551, 537, -575, 537, -575, 563, -575, 537, -575, 537, -575, 537, -602, 561, -551, 537, -1687, 537, -602, 536, -575, 537, -575, 537, -575, 563, -576, 536, -576, 536, -576, 536, -576, 562,
+                  -576, 536, -576, 536, -576, 561, -578, 536, -576, 559, -553, 535, -577, 536, -602, 536, -576, 536, -576, 560, -552, 536, -603, 535, -577, 535, -577, 535, -577, 562, -576, 560, -552, 559, -553, 535, -577, 586
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+  - id: send_start_heater_fan_ir_blast
+    then:
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6019, -3010, 564, -575, 537, -1686, 538, -575, 563, -575, 537, -575, 562, -550, 537, -601, 538, -574, 537, -576, 537, -575, 560, -578, 537, -1686, 538, -575, 563, -575, 561, -551, 537, -575, 537, -575, 563, -576, 536, -576, 536, -576, 536,
+                  -576, 563, -575, 560, -552, 536, -1714, 537, -1687, 537, -575, 561, -578, 560, -552, 560, -552, 536, -576, 587, -552, 535, -1688, 536, -1714, 537, -576, 560, -552, 559, -579, 536, -576, 536, -576, 536, -576, 536
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6017, -3036, 538, -574, 538, -1686, 564, -574, 538, -574, 562, -550, 538, -575, 563, -575, 537, -575, 561, -551, 537, -602, 561, -550, 537, -1687, 537, -602, 537, -575, 561, -551, 561, -551, 536, -602, 537, -575, 537, -575, 537, -575, 563,
+                  -576, 536, -576, 536, -576, 536, -1714, 560, -1664, 536, -603, 536, -576, 560, -551, 537, -575, 561, -578, 536, -576, 536, -1688, 562, -1688, 536, -576, 560, -552, 563, -576, 560, -552, 560, -551, 536, -577, 586
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+  - id: send_adjust_seat_heat_ir_blast
+    then:
+      - remote_transmitter.transmit_raw:
+          code: [
+                  6020, -3036, 538, -574, 538, -1712, 538, -574, 538, -574, 538, -574, 538, -601, 537, -575, 537, -575, 537, -575, 588, -550, 538, -574, 537, -1687, 564, -575, 537, -575, 537, -575, 537, -1713, 561, -1663, 537, -601, 537, -1687, 537, -576,
+                  536, -602, 537, -575, 561, -551, 560, -1690, 537, -1687, 537, -1714, 536, -576, 536, -1714, 537, -1687, 537, -575, 560, -579, 536, -576, 536, -575, 537, -1714, 560, -1664, 536, -1714, 561, -1663, 561, -552, 586, -552, 560
+                ]
+          carrier_frequency: "${carrier_frequencey}"
+      - remote_transmitter.transmit_raw:
+          code: [
+                  5992, -3036, 538, -574, 538, -1713, 561, -551, 561, -551, 561, -551, 537, -601, 562, -550, 537, -575, 561, -551, 537, -602, 537, -575, 537, -1686, 564, -575, 537, -575, 537, -575, 537, -1713, 561, -1663, 537, -602, 536, -1688, 537, -575,
+                  536, -602, 537, -575, 537, -575, 536, -1714, 561, -1664, 536, -1714, 537, -575, 536, -1688, 563, -1687, 537, -576, 536, -602, 536, -576, 560, -552, 536, -1714, 536, -1688, 536, -1714, 561, -1663, 537, -576, 586, -552, 560
+                ]
+          carrier_frequency: "${carrier_frequencey}"
 
 # https://esphome.io/components/button/index.html
 button:
   - platform: template
     name: "${friendly_name} On/Off"
     id: transmit_on_off_blast
-    icon: "mdi:fan"
+    icon: "mdi:power-cycle"
     on_press:
       - logger.log: "${friendly_name} on/off pressed"
       - script.execute: send_on_off_ir_blast
   - platform: template
-    name: "${friendly_name} Change Direction"
-    id: transmit_change_direction_blast
-    icon: "mdi:swap-horizontal"
+    name: "${friendly_name} Wash Butt"
+    id: transmit_wash_butt_blast
+    icon: "mdi:emoticon-poop"
     on_press:
-      - logger.log: "${friendly_name} change direction pressed"
-      - script.execute: send_change_direction_ir_blast
+      - logger.log: "${friendly_name} wash butt pressed"
+      - script.execute: send_wash_butt_ir_blast
   - platform: template
-    name: "${friendly_name} Increase Fans"
-    id: transmit_increase_fans_blast
-    icon: "mdi:fan-plus"
+    name: "${friendly_name} Feminine Wash"
+    id: transmit_feminine_wash_blast
+    icon: "mdi:human-female"
     on_press:
-      - logger.log: "${friendly_name} increase fans pressed"
-      - script.execute: send_increase_fans_ir_blast
+      - logger.log: "${friendly_name} feminine wash pressed"
+      - script.execute: send_feminine_wash_ir_blast
   - platform: template
-    name: "${friendly_name} Decrease Fans"
-    id: transmit_decrease_fans_blast
-    icon: "mdi:fan-minus"
+    name: "${friendly_name} Stop"
+    id: transmit_stop_blast
+    icon: "mdi:stop"
     on_press:
-      - logger.log: "${friendly_name} decrease fans pressed"
-      - script.execute: send_decrease_fans_ir_blast
+      - logger.log: "${friendly_name} stop pressed"
+      - script.execute: send_stop_ir_blast
+  - platform: template
+    name: "${friendly_name} Heater Fans"
+    id: transmit_start_heater_fan_blast
+    icon: "mdi:heat-wave"
+    on_press:
+      - logger.log: "${friendly_name} start heater fan pressed"
+      - script.execute: send_start_heater_fan_ir_blast
+  - platform: template
+    name: "${friendly_name} Adjust Seat Heat"
+    id: transmit_adjust_seat_heat_blast
+    icon: "mdi:car-seat-heater"
+    on_press:
+      - logger.log: "${friendly_name} start heater fan pressed"
+      - script.execute: send_adjust_seat_heat_ir_blast
 
 # https://esphome.io/components/switch/template
 switch:
   - platform: template
     name: ${friendly_name} Power Tx Switch
     id: "ir_tx_power_button"
-    restore_mode: ${vornado_restore_mode}
+    restore_mode: ${toto_restore_mode}
     optimistic: true
     assumed_state: true
     turn_on_action:
@@ -143,6 +226,6 @@ binary_sensor:
     on_press:
       then:
         - logger.log: "Transmitter button press started"
-        - logger.log: "Transmit IR rc_switch code"
+        - logger.log: "Transmit IR raw code"
         - switch.toggle: ir_tx_power_button
         - logger.log: "Done with transmitter button pressed!"
